[package]
name = "pyth-stub"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth_stub"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-program = "=1.17"
ahash = "=0.8.6"
pyth-sdk-solana = "0.10.1"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
