[package]
name = "tic-tac-toe"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tic_tac_toe"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.17.32"
ahash = "0.8.5"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
switchboard-solana = "0.29.106"
# pyth-solana-receiver-sdk = "0.2.0"

[dev-dependencies]
solana-program-test = "1.17.32"
solana-sdk = "1.17.32"
